# gemeindefinanzen

./: .gitignore  CLAUDE.md  Dockerfile.claude  Makefile  README.md  package-lock.json  package.json  playwright.config.mjs  pyproject.toml
.github/workflows/: e2e.yml  pages.yml
.issues/: config.yaml
.issues/auswertungen-erweitern-gemeindebudget/: CONTEXT.md  EXECUTION.md  ISSUE.md  PLAN.html  PLAN.md  RESEARCH.html  RESEARCH.md
.issues/auswertungen-varianten-bereinigen/: ISSUE.md
.issues/cac6c-statisches-browser-dashboard-mit-pdf-upload-und-clientseitigem-parsing/: CONTEXT.md  EXECUTION.md  ISSUE.md  PLAN.md  RESEARCH.md
.issues/gy5d1-sankey-drill-down-gegenueberliegende-seite-beibehalten/: CONTEXT.md  ISSUE.md  PLAN.html  PLAN.md  RESEARCH.html  RESEARCH.md
.issues/oh4sz-lokale-browser-test-infrastruktur-fuer-die-web-app/: EXECUTION.md  ISSUE.md  PLAN.html  PLAN.md  RESEARCH.md
.issues/pba6b-interaktives-mehrjahres-dashboard-mit-tabs-suche-und-filtern/: CONTEXT.md  EXECUTION.md  ISSUE.md  PLAN.md  RESEARCH.md
docs/: ANALYSE-LEITFADEN.md  BROWSER-APP.md  SCHEMA.md  VRV-2015-FORMAT.md  web-design-system.md
documents/: offenerhaushalt_30201_2026_va_ehh.csv  offenerhaushalt_30201_2026_va_fhh.csv
scripts/: check_dashboard_js.py  cross_validate.py  download_corpus.py  download_oh_csv.py  mupdf-geometrie.mjs  serve.mjs  validate_corpus.py
sql/: 02-gruppen-uebersicht.sql  05-luecke-800k.sql  07-transferaufwand.sql  11-kommunalsteuer-kontext.sql
tests/: test_parser.py  test_report.py
web/: POC.md  dashboard.html  index.html  schema.sql  version.json
(+96 files in other folders)
